# rosec

./: .aideignore  .gitignore  Cargo.toml  FUTURE.md  Justfile  README.md  release.toml
.github/workflows/: ci.yml  release.yml
contrib/aur/: PKGBUILD  PKGBUILD-bin  PKGBUILD-git  PKGBUILD-provider-bitwarden-pm  PKGBUILD-provider-bitwarden-pm-bin  PKGBUILD-provider-bitwarden-sm  PKGBUILD-provider-bitwarden-sm-bin  PKGBUILD-provider-gnome-keyring-bin  rosec.install
contrib/bash/: rosec.bash
contrib/fish/: rosec.fish
contrib/pam/: .gitignore  Makefile  mock_pam_auth.c  mock_unlock_helper.c  pam_rosec.c  rosec  test_pam_rosec.c
contrib/systemd/: rosecd.service
contrib/zsh/: README.md  _rosec  rosec.plugin.zsh
docs/: cli.md  configuration.md  design-offline-cache.md  pam.md  ssh-agent.md  tech-debt.md  troubleshooting.md  wasm-provider-guide.md
docs/providers/: bitwarden-sm.md  bitwarden.md  capabilities.md  local.md
examples/: config.toml
rosec/: Cargo.toml
rosec-bitwarden-pm/: Cargo.toml
rosec-bitwarden-pm/src/: api.rs  cipher.rs  crypto.rs  error.rs  lib.rs  protocol.rs  vault.rs
rosec-bitwarden-sm/: Cargo.toml
rosec-bitwarden-sm/src/: api.rs  crypto.rs  error.rs  lib.rs  protocol.rs
rosec-bitwarden-wasm/: Cargo.toml
rosec-bitwarden-wasm/src/: lib.rs  protocol.rs
rosec-bitwarden/src/: api.rs  backend.rs  error.rs  lib.rs  notifications.rs  oauth_cred.rs  provider.rs  vault.rs
rosec-core/: Cargo.toml
rosec-core/src/: config.rs  config_edit.rs  credential.rs  dedup.rs  lib.rs  machine_key.rs  oauth.rs  prompt.rs  router.rs  totp.rs
rosec-fuse/src/: fs.rs  lib.rs  totp_fs.rs
rosec-gnome-keyring/: Cargo.toml
rosec-gnome-keyring/src/: keyring.rs  lib.rs  protocol.rs
rosec-pam/src/: main.rs
rosec-prompt/: Cargo.toml
rosec-prompt/src/: main.rs
rosec-secret-service/: Cargo.toml
rosec-secret-service/src/: collection.rs  crypto.rs  error.rs  item.rs  lib.rs  portal.rs  prompt.rs  server.rs  service.rs  session.rs  state.rs  tty.rs  unlock.rs
rosec-secret-service/src/daemon/: items.rs  management.rs  mod.rs  search.rs  secrets.rs
rosec-ssh-agent/src/: keystore.rs  lib.rs  session.rs
rosec-vault/src/: backend.rs  crypto.rs  lib.rs  provider.rs  types.rs
rosec-wasm/: Cargo.toml
rosec-wasm/src/: cache.rs  discovery.rs  host_http.rs  lib.rs  notifications.rs  protocol.rs  provider.rs  wasm_cred.rs
rosec-wasm/src/keys/: mod.rs  rosec-wasm-signing.pub
rosec/src/: cli.rs  main.rs
rosec/src/enable/: mod.rs
rosec/src/enable/templates/: org.freedesktop.impl.portal.desktop.rosec.service  org.freedesktop.secrets.service  org.gnome.keyring.service  rosec.portal  rosecd.service  rosecd.socket
rosecd/: Cargo.toml  build.rs
rosecd/src/: bus.rs  main.rs  ssh.rs  totp.rs
tests/: e2e-secret-tool.sh
