[package]
name = "rosec-bitwarden-sm"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "LicenseRef-Bitwarden-SDK"
description = "Bitwarden Secrets Manager provider as an Extism WASM guest plugin for rosec"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Extism guest SDK
extism-pdk = "1.4.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto (subset of PM — no RSA, no Argon2, no PBKDF2, no SHA-1)
aes = "0.8"
cbc = "0.1"
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"
base64 = "0.22"
block-padding = "0.3"

# Zeroize for secret scrubbing
zeroize = { version = "1", features = ["derive"] }
