[package]
name = "rosec-prompt"
version.workspace = true
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
cosmic-text = "0.12.1"
futures-util = { workspace = true }
iced = { workspace = true }
rpassword = { workspace = true }
rosec-core = { path = "../rosec-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize = { workspace = true }

# QR code scanning
image = { version = "0.25", default-features = false, features = ["png"] }
rqrr = "0.8"
ashpd = "0.10"
tokio = { workspace = true }
