[package]
name = "rosec-wasm"
version.workspace = true
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "WASM plugin host for rosec providers (Extism-based)"

[dependencies]
rosec-core = { path = "../rosec-core" }
extism = "1.13.0"
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
zeroize = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
